--- a/test/assets/css/tailwind.css
+++ b/test/assets/css/tailwind.css
@@ -2,22 +2,65 @@
 @tailwind components;
 @tailwind utilities;
 
-.custom-table-shadow{
-    box-shadow: 0px 0px 15px 0px #00000038;
+.title-s-font{
+  font-weight: 500;
+	font-size: 13px;
+	line-height: 1;
+	color: #2D3B87;
+}
+.text-l-font{
+	font-weight: 400;
+	font-size: 15px;
+	line-height: 1;
+	color: #969DC3;
+}
+.text-card-grey{
+	font-weight: 400;
+	font-size: 13px;
+	line-height: 1;
+	color: #969DC3;
+}
+.text-title-m{
+	font-weight: 500;
+	font-size: 15px;
+	line-height: 1.35;
+	color: #2D3B87;
+}
+.text-card-m{
+	font-weight: 400;
+	font-size: 13px;
+	line-height: 1;
+	color: #616CA5;
+}
+.text-card-m-blue{
+	font-weight: 400;
+	font-size: 13px;
+	line-height: 1;
+	color: #2D3B87;
+}
+.text-desc-blue{
+	font-weight: 400;
+	font-size: 13px;
+	line-height: 1.5;
+	color: #2D3B87;
+}
+.text-price-blue{
+	font-weight: 500;
+	font-size: 20px;
+	line-height: 1;
+	color: #2D3B87;
+}
+.text-add-button{
+	font-weight: 500;
+	font-size: 15px;
+	line-height: 1;
+	color: #2D3B87;
+}
+.text-add-button-dis{
+	font-weight: 500;
+	font-size: 15px;
+	line-height: 1;
+	color: #ffffff;
 }
 @layer base{
-    * { 
-        scrollbar-width: none;
-      }
-      
-      /* для Chrome/Edge/Safari */
-      *::-webkit-scrollbar {
-        width: 0px;
-      }
-      *::-webkit-scrollbar-track {
-        background: transparent;
-      }
-      *::-webkit-scrollbar-thumb {
-
-      }
-    }
+  }
